--- a/client/src/Components/Initiatives/Section2.module.css
+++ b/client/src/Components/Initiatives/Section2.module.css
@@ -83,6 +83,10 @@
   margin: 30px 0px 0 0px;
 }
 
+.containertext p {
+  font-size: 18px;
+}
+
 .heading h1 .containerH2 {
   font-family: "Cormorant Garamond", serif;
 }
@@ -91,16 +95,6 @@
 .contentDetails p {
   font-family: "Source Sans Pro", sans-serif;                   
 }
-/* .previous,
-.next {
-  text-align: center;
-  margin-left: 10px;
-  margin-right: 10px;
-  background: none;
-  color: darkgreen;
-  text-decoration: underline;
-  border: none;
-} */
 
 .Dnext {
   position: absolute;
@@ -154,9 +148,6 @@
   position: relative;
   width: 100%;
   display: none;
-  /*
-      border: 1px solid black;
-      background-color: blanchedalmond; */
   margin: 0px 0px;
 }
 
@@ -172,6 +163,12 @@
   margin-left: 55px;
   font-size: 40px;
   font-weight: 700;
+}
+
+@media screen and (min-width: 1400px) {
+  .containertext p {
+    font-size: 20px;
+  }
 }
 
 @media screen and (max-width: 1150px) {
@@ -300,11 +297,11 @@
 
   .heading {
     position: relative;
-    /* text-align: center; */
   }
 
   .heading h1 {
-    margin-left: 30px;
+    margin-left: 50px;
+    font-weight: bolder;
     font-size: 25px;
     margin-top: 30px;
   }
@@ -325,7 +322,7 @@
     position: absolute;
     left: 30px;
     right: 30px;
-    font-size: 18px;
+    font-size: 20px;
     text-align: justify;
   }
 
@@ -396,7 +393,7 @@
   }
 
   .container3 {
-    background-image: url("https://drive.google.com/uc?id=1JXc-HcF6gmJriC3-426A-jON98heQf6W");
+    background-image: url("https://drive.google.com/uc?id=13PQzs1s1tx85yBkYwiswLBHB7BQabT2j");
   }
 
   .container4 {
@@ -428,15 +425,15 @@
   }
 
   .heading h1 {
-    font-size: 22px;
+    font-size: 23px;
     margin-top: 30px;
-    margin-left: 35px;
+    margin-left: 45px;
   }
   .contentDetails p {
     position: absolute;
     left: 30px;
     right: 30px;
-    font-size: 16px;
+    font-size: 18px;
     text-align: justify;
   }
 }
@@ -490,7 +487,7 @@
   }
 
   .heading h1 {
-    margin-left: 30px;
+    margin-left: 40px;
     font-size: 22px;
     margin-top: 30px;
   }
@@ -578,7 +575,7 @@
   }
 
   .container3 {
-    background-image: url("https://drive.google.com/uc?id=1JXc-HcF6gmJriC3-426A-jON98heQf6W");
+    background-image: url("https://drive.google.com/uc?id=13PQzs1s1tx85yBkYwiswLBHB7BQabT2j");
   }
 
   .container4 {
