changed all URLs

--- a/client/src/Components/FAQ/Faqsection/Faqsection.module.css
+++ b/client/src/Components/FAQ/Faqsection/Faqsection.module.css
@@ -1,7 +1,7 @@
 
 .p{
   margin: 50px 0 20px 0;
-  background-image: url(https://drive.google.com/uc?id=1sATPrWrtpApDsvAB_eUP6WGuA0PJmYgO);
+  background-image: url('https://drive.google.com/uc?id=1VdV7ko-IMHIneKH0b3JtBI1LLURP5ka1');
   padding: max(2.5vw, 25px);
   font-size: max(1.8vw, 20px);
   text-align: center;
